--- a/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
+++ b/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
@@ -160,11 +160,11 @@
                                     <span class="ps-2" id="shareQuoteLabel"  [ngClass]="{ 'bold-label': selectedOption === 'email' }">Email</span>
                                 </div>
                                 <div class="col-3">                                      
-                                    <input type="radio"  id="shareRadio" name="flexRadioDefault" [(ngModel)]="selectedOption" value="sms" /> 
+                                    <input class="form-check-input" type="radio"  id="shareRadio" name="flexRadioDefault" [(ngModel)]="selectedOption" value="sms" /> 
                                     <span class="ps-2" id="shareQuoteLabel"  [ngClass]="{ 'bold-label': selectedOption === 'sms' }">SMS</span>
                                 </div>
                                 <div class="col-4">
-                                    <input type="radio"  id="shareRadio" name="flexRadioDefault" [(ngModel)]="selectedOption" value="whatsapp" /> 
+                                    <input  class="form-check-input"type="radio"  id="shareRadio" name="flexRadioDefault" [(ngModel)]="selectedOption" value="whatsapp" /> 
                                     <span class="ps-2" id="shareQuoteLabel" [ngClass]="{ 'bold-label': selectedOption === 'whatsapp' }">Whatsapp</span>
     
                                 </div>
@@ -185,7 +185,7 @@
                             <div class="row mt-4 mb-4">
                                 <div class="col-6"></div>
                                 <div class="col-6 d-flex justify-content-end">                                      
-                                    <button type="button" class="btn btn-primary" id="sendQoute" data-bs-dismiss="modal" (click)="emaildetails()" >Send</button>
+                                    <button type="button" class="btn btn-primary" id="sendQoute" data-bs-dismiss="modal" (click)="handleShare()" >Send</button>
                                 </div>
                             </div>
                           </div>
